# smoothysearch

./: .gitignore  .qmlls.ini  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  smoothysearch-service.desktop  smoothysearch-themer.desktop  smoothysearch.desktop
include/: qt_url_opener.h  qt_window_effects.h
qml/: EntryList.qml  Main.qml  SearchBar.qml  ThemeEditorPane.qml
src/: backend.rs  config.rs  main.rs  qt_url_opener.cpp  qt_window_effects.cpp  smoothysearch-service.desktop  smoothysearch-themer.desktop  smoothysearch.desktop  theme.rs
src/backend/: apps.rs  editor.rs  resident.rs  themes.rs
