[package]
name = "smoothysearch"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
